--- a/package.json
+++ b/package.json
@@ -6,24 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.27.0",
     "@tanstack/react-query": "^5.21.7",
+    "@types/history": "^4.7.11",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.13",
     "post": "^0.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@mswjs/http-middleware": "^0.9.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cors": "^2.8.5",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "express": "^4.18.2",
+    "msw": "2.1",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
